fix:: worked on element padding to stop overflow bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,5 +13,7 @@
 }
 
 body {
+  overflow-x: hidden;
   padding: 0px;
+  box-sizing: border-box;
 }
